--- a/Tic Tac Toe/style.css
+++ b/Tic Tac Toe/style.css
@@ -44,3 +44,25 @@ h1{
     border:0;
     background-color: #F2F1EB;
 }
+p{
+    font-size: 40px;
+}
+.new-button{
+    margin: 20px;
+    width: 150px;
+    height: 40px;
+    font-size: 22px;
+    border-radius: 10px;
+    border:0;
+    background-color: #F2F1EB;
+}
+.message{
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.hidden{
+    display: none;
+}
